# flask-api-factory

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
flask_api_factory/: __init__.py  auth.py  constants.py  decorators.py  order.py  page.py
flask_api_factory/actions/: __init__.py  amqp.py
flask_api_factory/filter/: __init__.py  casts.py
flask_api_factory/openapi/: __init__.py  models.py  path.py
migrations/versions/: e9548fb98646_initial_database.py
sample/: __init__.py  config.py
sample/apps/: __init__.py
sample/apps/pets/: __init__.py  models.py  serializers.py
sample/apps/pets/resources/: __init__.py  owner.py  pet.py  pet_type.py
sample/ext/: __init__.py  db.py  json.py  jsonify.py  migrate.py  openapi.py
tests/: conftest.py  factories.py  test_auth.py  test_dummy.py  test_page.py
